Fixed spacing issues on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -727,6 +727,9 @@ div.mini-molt:hover div.mini-molt:hover {
 .mini-molt-timestamp a {
     color: inherit;
 }
+.mini-molt-actions {
+    min-width: 170px;
+}
 .mini-molt-action {
     cursor: pointer;
     color: var(--light-faded);
